<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cross</groupId>
  <artifactId>hospital-management-system</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <bnd.maven.version>3.5.0</bnd.maven.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.osgi</groupId>
      <artifactId>osgi.core</artifactId>
      <version>6.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.osgi</groupId>
      <artifactId>osgi.cmpn</artifactId>
      <version>6.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.osgi</groupId>
      <artifactId>osgi.annotation</artifactId>
      <version>6.0.1</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mindrot</groupId>
      <artifactId>jbcrypt</artifactId>
      <version>0.4</version>
    </dependency>
      <!-- JavaFX Controls -->
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>24.0.1</version>
      </dependency>

      <!-- JavaFX FXML -->
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>24.0.1</version>
      </dependency>

      <!-- JavaFX Base -->
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-base</artifactId>
          <version>24.0.1</version>
      </dependency>

      <!-- JavaFX Graphics -->
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>24.0.1</version>
      </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>biz.aQute.bnd</groupId>
        <artifactId>bnd-maven-plugin</artifactId>
        <version>${bnd.maven.version}</version>
        <configuration>
          <bnd><![CDATA[
# Automatically export any package annotated with @Version in its package-info.java
-exportcontents: ${packages;VERSIONED}

# Generate an OSGi Contract Requirement for bundles that depend on the Servlet API
# (see https://www.osgi.org/portable-java-contract-definitions/)
-contract: JavaServlet

# Force Declarative Services bundles to declare a requirement for DS version 1.3
# even when they only use features from a previous version
-dsannotations-options: extender, inherit
          ]]>
          </bnd>
        </configuration>
        <executions>
          <execution>
            <id>default-bnd-process</id>
            <goals>
              <goal>bnd-process</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>biz.aQute.bnd</groupId>
        <artifactId>bnd-indexer-maven-plugin</artifactId>
        <version>${bnd.maven.version}</version>
        <configuration>
          <includeJar>true</includeJar>
          <localURLs>${local.index.policy}</localURLs>
        </configuration>
        <executions>
          <execution>
            <id>default-index</id>
            <goals>
              <goal>index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>biz.aQute.bnd</groupId>
        <artifactId>bnd-baseline-maven-plugin</artifactId>
        <version>${bnd.maven.version}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <archive>
            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>

        <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <version>0.0.8</version>
            <configuration>
                <mainClass>com.cross.hospital.gui.HospitalApp</mainClass>
                <options>
                    <option>--module-path</option>
                    <option>C:\Users\ASUS\Downloads\openjfx-24.0.2_windows-x64_bin-sdk/lib</option>
                    <option>--add-modules</option>
                    <option>javafx.controls,javafx.fxml</option>
                </options>
            </configuration>
        </plugin>

    </plugins>
  </build>

</project>
